--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.
                 </p>
             </section>
-            <div class="divider"></div>
+            <div class="divider" id="d1"></div>
             <section id="about">
                 <p class="headline">
                     Para os amantes de história
@@ -40,11 +40,11 @@
                 </p>
             </section>  
             <div id="conteudo">
-                <img src="assets/temple-one-image.jpg" alt="" id="initial_list_image">
+                <img src="assets/temple-one-image.jpg" alt="Templo um" id="temple1">
                 <section>
                     <h3>1. Templo Haedong Yonggungsa </h3>
                     <p>
-                        O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. <br>
+                        O Templo Haedong Yonggungsa é um templo budista localizado no extremo nordeste de Busan. Construído em 1376, é um dos poucos templos na Coreia construídos à beira-mar - você pode desfrutar de vistas do Mar do Leste de um lado e de belas montanhas do outro. <br><br>
                     </p>
                 </section>
                 <section class="extra">
@@ -55,11 +55,11 @@
                         </li>
                     </ul>
                 </section>
-                <img src="assets/temple-two-image.jpg" alt="Templo dois">
+                <img src="assets/temple-two-image.jpg" alt="Templo dois" id="temple2">
                 <section>
                     <h3>2. Templo Beomeo-sa</h3>
                     <p>
-                        O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. <br>
+                        O Templo Beomeo-sa é um dos maiores santuários da Coreia do Sul. Ele está localizado no alto da borda leste da montanha Geumjeongsa e fica distante da agitação da cidade. O Daeungjeon Hall do templo é um exemplo bem preservado da arquitetura da Dinastia Joseon. <br><br>
                     </p>
                 </section>
                 <section class="extra">
@@ -70,11 +70,11 @@
                         </li>
                     </ul>
                 </section>
-                <img src="assets/temple-three-image.jpg" alt="Templo tres">
+                <img src="assets/temple-three-image.jpg" alt="Templo tres" id="temple3">
                 <section>
                     <h3>3. Parque Yongdusan</h3>
                     <p>    
-                        O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus – confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. <br>
+                        O Parque Yongdusan, localizado no centro de Busan, abriga alguns dos monumentos mais importantes da cidade. Você pode ver vistas espetaculares do topo da Torre Busan, de 120 metros de altura. O parque tem 2 museus - confira os instrumentos musicais tradicionais no Museum of World Folk Instruments e mais de 80 veleiros coreanos no Exhibition Hall of World Model Boats. <br><br>
                     </p>
                 </section>
                 <section class="extra">
@@ -92,7 +92,7 @@
                     </ul>
                 </section>
             </div>
-            <div class="divider"></div>
+            <div class="divider" id="d2"></div>
             <section class="description">
                 <p>
                     As melhores coisas para fazer em Busan mostram a reputação da cidade como um importante porto marítimo na Ásia. Frequentemente vista como a essência da Coreia do Sul, você experimentará uma atmosfera única em termos de diversidade étnica e cultural, já que a cidade recebe um público cosmopolita o ano todo.
