--- a/index.html
+++ b/index.html
@@ -100,5 +100,11 @@
             </section>
         </main>
     </div>
+    
+    <footer>
+        Feito com
+        <img src="assets/heart.svg" alt="Coracaozinho">
+        por PaivaCode
+    </footer>
 </body>
 </html>
